fix(board): adjust overflow property and z-index for better layout fix(nav_template): restore z-index for header and clean up CSS

--- a/assets/css/board.css
+++ b/assets/css/board.css
@@ -2,8 +2,9 @@
   padding: 206px 40px 0px 322px;
   display: flex;
   flex-direction: column;
-  overflow: hidden;
+  overflow: auto;
   max-width: 1440px;
+  z-index: 1;
 }
 
 .board-header {
